# crabtive

./: README.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml  test_config.json
core/src/: lib.rs
