[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.14.0"
serde = "1.0.214"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
hyper-tls = "0.6.0"
